# bevy_render_test2

./: Cargo.toml  README.md
examples/: example1.rs
old/: mypass.rs
src/: components.rs  lib.rs  main.rs  plugin.rs
src/core/: camera.rs  graph.rs  mod.rs  plugin.rs
src/core/blit/: mod.rs
src/core/core_2d/: camera.rs  graph.rs  main_opaque_pass_2d_node.rs  main_transparent_pass_2d_node.rs  mod.rs  mypass.rs  passes.rs  phases.rs  systems.rs
src/core/core_my/: camera.rs  graph.rs  mod.rs  systems.rs
src/core/core_my/nodes/: opaque.rs  transparent.rs
src/core/core_my/passes/: mod.rs  opaque.rs  transparent.rs
src/core/core_my/phases/: alpha.rs  batch.rs  opaque.rs  transparent.rs
src/core/fullscreen_vertex_shader/: mod.rs
src/core/passes/: opaque.rs
src/core/upscaling/: mod.rs  node.rs  nodes.rs  systems.rs
src/mesh/: mod.rs  resources.rs  shaders.rs
src/mesh/render/: components.rs  draws.rs  dummy_image.rs  mod.rs  pipelines.rs  resources.rs  systems.rs  utils.rs
src/render/: camera.rs  components.rs  draw.rs  graphs.rs  mesh2d_col.wgsl  mod.rs  pass.rs  phase.rs  pipeline.rs  resources.rs  shaders.rs  systems.rs
src/upscaling/: mod.rs  plugin.rs
