[package]
name = "render_test2"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_render","bevy_asset","bevy_color","bevy_image",
    #"trace",
    #"multi_threaded",
    #"bevy_core_pipeline",
    #"bevy_sprite",
    #"serialize",

    #"bevy_window",
] }

bytemuck = "1.7"
tracing = { version = "0.1", default-features = false, features = ["std"] }
radsort = "0.1"

[dev-dependencies]
bevy = { version = "0.18", default-features = false, features = [
    #"bevy_window",
    #"default_app",
    #"bevy_gilrs",
    "bevy_winit",
#     #"serialize",
#     "file_watcher",
#     "dynamic_linking",
    "png",
] }

[features]
trace = []
webgl = []
webgpu = []

[lib]
name = "render_test"
path = "src/lib.rs"

[[example]]
name = "example1"
path = "examples/example1.rs"